--- a/Coding-practise- 09th May/Portfolio Website Navbar.html
+++ b/Coding-practise- 09th May/Portfolio Website Navbar.html
@@ -27,5 +27,44 @@
     ></script>
     <link rel="stylesheet" href="./Portfolio Website Navbar.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+      <a class="navbar-brand a" href="#"> J. </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarMenu"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarMenu">
+        <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link active" href="#"
+            >Home <span class="sr-only">(current)</span></a
+          >
+          <a class="nav-item nav-link active" href="#">About me</a>
+          <a class="nav-item nav-link active" href="#">Projects</a>
+          <a class="nav-item nav-link active" href="#">Recent Blogs</a>
+          <a class="nav-item nav-link active" href="#">Testimonial</a>
+        </div>
+      </div>
+    </nav>
+
+    <div class="bg-container pl-3 pb-3">
+      <div class="row">
+        <div class="col-12 ml-auto col-md-4 order-md-2 pt-5">
+          <img
+            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-bannerimg.png"
+          />
+        </div>
+        <div class="col-12 mt-md-5 col-md-8 order-md-1">
+          <h1>Hey, I am <span>Jenny</span></h1>
+          <p>I am a Frontend Developer & Mentor.</p>
+
+          <button class="button">Contact Me</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
