--- a/Coding-practise- 09th May/Portfolio Website Footer Section.html
+++ b/Coding-practise- 09th May/Portfolio Website Footer Section.html
@@ -25,7 +25,61 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="./Portfolio Website Footer Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-container pt-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-3 mt-md-5">
+            <div class="d-flex flex-row mb-3">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-about-me-img.png"
+                alt=""
+              />
+              <div class="text">
+                <h1 id="h1">Jenny</h1>
+                <p>Frontend Developer</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-3 mt-md-5">
+            <h1>Phone No.</h1>
+            <p><i class="bi bi-telephone-fill"></i>9876543210</p>
+          </div>
+
+          <div class="col-12 col-md-3 mt-md-5">
+            <h1>E-mail</h1>
+            <p><i class="bi bi-envelope-fill"></i>jenny3@gmail.com</p>
+          </div>
+
+          <div class="col-12 col-md-3 mt-md-5">
+            <h1>Address</h1>
+            <p>
+              <i class="bi bi-map-fill"></i>17 Ayur Vgyan nagar, New Delhi,
+              India.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="bottom-bg-container">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 text-center">
+              <p class="p">
+                <i class="bi bi-c-circle icon1"></i>
+                2020 by Rahul. Created with Bootstrap.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
