--- a/Coding-practise- 09th May/Portfolio Website Services Section.html
+++ b/Coding-practise- 09th May/Portfolio Website Services Section.html
@@ -27,5 +27,46 @@
     ></script>
     <link rel="stylesheet" href="./Portfolio Website Services Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-bg-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mt-5">
+            <h1 id="h1">Services</h1>
+            <h1 class="h1">What I do</h1>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="card-container p-4 shadow">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-webdesign-img.png"
+              />
+              <h1>Static Websites</h1>
+              <p>A stic skjsdbcdhvkdnjvkjvb</p>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="card-container p-4 shadow">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-webdevelopment-img.png"
+              />
+              <h1>Responsive Web design</h1>
+              <p>A stic skjsdbcdhvkdnjvkjvb</p>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="card-container p-4 shadow">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-customizeimg.png"
+                class="image w-100"
+              />
+              <h1>Customisable Layouts</h1>
+              <p>A stic skjsdbcdhvkdnjvkjvb</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
