--- a/Coding-practise- 09th May/Portfolio Website Navbar.html
+++ b/Coding-practise- 09th May/Portfolio Website Navbar.html
@@ -55,7 +55,8 @@
       <div class="row">
         <div class="col-12 ml-auto col-md-4 order-md-2 pt-5">
           <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-bannerimg.png"
+            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-banner-img.png"
+            class="image w-50"
           />
         </div>
         <div class="col-12 mt-md-5 col-md-8 order-md-1">
