--- a/Coding-practise- 09th May/Portfolio Website Services Section.html
+++ b/Coding-practise- 09th May/Portfolio Website Services Section.html
@@ -41,7 +41,11 @@
                 src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-web-design-img.png"
               />
               <h1>Static Websites</h1>
-              <p>A</p>
+              <p>
+                A Static Website contains Web pages with fixed content. Each
+                page is developed using HTML and CSS and displays the same
+                information to every visitor.
+              </p>
             </div>
           </div>
 
@@ -51,7 +55,11 @@
                 src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-web-development-img.png"
               />
               <h1>Responsive Web design</h1>
-              <p>A stic skjsdbcdhvkdnjvkjvb</p>
+              <p>
+                Responsive Web design is the approach that suggests that design
+                and development should respond to the user's behaviour and
+                environment based on screen size, platform and orientation.
+              </p>
             </div>
           </div>
 
@@ -61,7 +69,12 @@
                 src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-customize-img.png"
               />
               <h1>Customisable Layouts</h1>
-              <p>A stic skjsdbcdhvkdnjvkjvb</p>
+              <p>
+                Customisable sites are templates with set layouts. You may be
+                able to change photos and colors, but your site will look
+                similar to many other sites due to the template. The same goes
+                for...
+              </p>
             </div>
           </div>
         </div>
