--- a/Coding-practise- 09th May/Portfolio Website Work Done Section.html
+++ b/Coding-practise- 09th May/Portfolio Website Work Done Section.html
@@ -25,7 +25,42 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="./Portfolio Website Work Done Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-bg-container p-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <div class="text-white text-center">
+              <i class="bi bi-hand-thumbs-up"></i>
+
+              <hr />
+              <p><span class="p">10</span><br />Projects Completed</p>
+            </div>
+          </div>
+
+          <div class="col-4">
+            <div class="text-white text-center">
+              <i class="bi bi-card-text"></i>
+              <hr />
+              <p><span class="p">2800</span><br />Lines of Code</p>
+            </div>
+          </div>
+
+          <div class="col-4">
+            <div class="text-white text-center">
+              <i class="bi bi-clock"></i>
+              <hr />
+              <p><span class="p">15</span><br />Hours Worked</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
