--- a/Coding-practise- 09th May/Portfolio Website Projects Section.html
+++ b/Coding-practise- 09th May/Portfolio Website Projects Section.html
@@ -27,5 +27,75 @@
     ></script>
     <link rel="stylesheet" href="./Portfolio Website Projects Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="top-bg-container">
+      <h1 class="ml-md-4">Portfolio</h1>
+      <h1 class="h1 ml-md-4">Projects I have done</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="card-container shadow">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-project-1-img.png"
+                class="image w-100"
+              />
+              <h1 id="h1">Web design</h1>
+              <h1 style="color: white">Royal Grand Hotel</h1>
+              <p>
+                Royal Grand Hotel is a Simple Static Website. we can use this
+                layout for building the other websites...
+              </p>
+              <a href="#" class="read-more"
+                >Read More
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-arrow-right"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <div class="card-container shadow">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-project-2-img.png"
+                class="image w-100"
+              />
+              <h1 id="h1">Web design</h1>
+              <h1 style="color: white">Happy Meals</h1>
+              <p>
+                Happy Meals is the best-in-class food ordering today. With
+                interactive UI/UX and simple call to actions...
+              </p>
+              <a href="#" class="read-more"
+                >Read More
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-arrow-right"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
