--- a/Coding-practise - 11th May/Ecommerce Website Services Section.html
+++ b/Coding-practise - 11th May/Ecommerce Website Services Section.html
@@ -25,7 +25,7 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./.css" />
+    <link rel="stylesheet" href="./Ecommerce Website Services Section.css" />
   </head>
   <body></body>
 </html>
