--- a/Coding-practise - 11th May/Ecommerce Website Trending Blogs Section.html
+++ b/Coding-practise - 11th May/Ecommerce Website Trending Blogs Section.html
@@ -25,7 +25,10 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./.css" />
+    <link
+      rel="stylesheet"
+      href="./Ecommerce Website Trending Blogs Section.css"
+    />
   </head>
   <body></body>
 </html>
