--- a/Coding-practise - 11th May/Ecommerce Website Contact Us Section.html
+++ b/Coding-practise - 11th May/Ecommerce Website Contact Us Section.html
@@ -25,7 +25,16 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./Ecommerce Website Explore Section.css" />
+    <link rel="stylesheet" href="./Ecommerce Website Contact Us Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-container p-6">
+      <div class="row">
+        <div class="col-12 d-block p-3 m-3 text-center">
+          <h1>Let us Join Together</h1>
+          <button>CONTACT US</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
