--- a/Coding-practise - 11th May/Ecommerce Website Explore Section.html
+++ b/Coding-practise - 11th May/Ecommerce Website Explore Section.html
@@ -25,7 +25,122 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="./Ecommerce Website Explore Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-bg-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mt-5">
+            <h1 id="h1">Explore Deals & Offers</h1>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="card-container p-4 shadow">
+              <h1>Up to 80% Off | Electronics & Gadgets</h1>
+              <div class="d-flex flex-row justify-content-center">
+                <div class="p-3 text-center">
+                  <img
+                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-mamba-watch-img.png"
+                    class="mb-3 w-100 h-60"
+                  />
+                  <h1 class="deals-para">Smart Watch</h1>
+                </div>
+
+                <div class="p-3 text-center">
+                  <img
+                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-camera-img.png"
+                    class="mb-3 w-100 h-60"
+                  />
+                  <h1 class="deals-para">Cameras</h1>
+                </div>
+              </div>
+              <div class="d-flex flex-row justify-content-center">
+                <div class="p-3 text-center">
+                  <img
+                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-sport-and-fitness-img.png"
+                    class="mb-3 w-100 h-60"
+                  />
+                  <h1 class="deals-para">Sports & Fitnes</h1>
+                </div>
+
+                <div class="p-3 text-center">
+                  <img
+                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-ear-phones-pink-img.png"
+                    class="mb-3 w-100 h-60"
+                  />
+                  <h1 class="deals-para">Earphones</h1>
+                </div>
+              </div>
+              <div class="para">
+                <p>See All Deals <i class="bi bi-arrow-right"></i></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="card-container p-4 shadow">
+              <h1>Festive Offers TVs & appliances</h1>
+
+              <div class="text-center">
+                <img
+                  src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-tv-img.png"
+                  class="mb-3 w-100 h-100"
+                />
+              </div>
+              <div class="para">
+                <p>See All Deals <i class="bi bi-arrow-right"></i></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="card-container p-4 shadow">
+              <h1>Under Rs 4000 | Friendly Accessories</h1>
+              <div class="d-flex flex-row justify-content-center">
+                <div class="p-3 text-center">
+                  <img
+                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-tablet-device-img.png"
+                    class="mb-3 w-100 h-60"
+                  />
+                  <h1 class="deals-para">Tablet</h1>
+                </div>
+
+                <div class="p-3 text-center">
+                  <img
+                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-joy-stick-img.png"
+                    class="mb-3 w-100 h-60"
+                  />
+                  <h1 class="deals-para">PlayStation</h1>
+                </div>
+              </div>
+              <div class="d-flex flex-row justify-content-center">
+                <div class="p-3 text-center">
+                  <img
+                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-speakers-big-img.png"
+                    class="mb-3 w-100 h-60"
+                  />
+                  <h1 class="deals-para">Speakers</h1>
+                </div>
+
+                <div class="p-3 text-center">
+                  <img
+                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-explore-vr-set-img.png"
+                    class="mb-3 w-100 h-60"
+                  />
+                  <h1 class="deals-para">Virtual Reality Set</h1>
+                </div>
+              </div>
+              <div class="para">
+                <p>See All Deals <i class="bi bi-arrow-right"></i></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
