--- a/Coding-practise - 11th May/Ecommerce Website Services Section.html
+++ b/Coding-practise - 11th May/Ecommerce Website Services Section.html
@@ -27,5 +27,62 @@
     ></script>
     <link rel="stylesheet" href="./Ecommerce Website Services Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-bg-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mt-5">
+            <h1 id="h1">Our Services</h1>
+            <p class="para">
+              Most online stores offer lower prices. Online shopping makes price
+              comparision simpler and quicker. It is very convenient to shop
+              from where you are located. It saves you the cost of driving to
+              stres, as well as parking fees.
+            </p>
+          </div>
+
+          <div class="col-12 col-md-4 col-lg-4 mb-4">
+            <div class="card-container p-4 text-center shadow">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-services-delivery-img.png"
+                class="mb-3 w-50 h-50"
+              />
+
+              <h1>Fast and Free delivery</h1>
+              <p>
+                Fast, free and convenient delivery choices on millions of items.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4 col-lg-4 mb-4">
+            <div class="card-container p-4 text-center shadow">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-services-money-back-img.png"
+                class="mb-3 w-50 h-50"
+              />
+
+              <h1>100% Money back guarantee</h1>
+              <p>This is probably the most popular guarantee in the world.</p>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4 col-lg-4 mb-4">
+            <div class="card-container p-4 text-center shadow">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-services-24-by-7-support-img.png"
+                class="mb-3 w-50 h-50"
+              />
+
+              <h1>Online Support 24/7</h1>
+              <p>
+                Our Online Support will provide you with many useful functions,
+                valuable information, tips.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
