--- a/Coding-practise - 11th May/Ecommerce Website Trending Blogs Section.html
+++ b/Coding-practise - 11th May/Ecommerce Website Trending Blogs Section.html
@@ -27,8 +27,72 @@
     ></script>
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="./Ecommerce Website Trending Blogs Section.css"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="main-bg-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mt-5">
+            <h1 id="h1">Trending Blogs</h1>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-6 mb-4">
+            <div class="card-container shadow">
+              <div class="text-center mb-2">
+                <img
+                  src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-trending-blogs-1-img.png"
+                  class="mb-3 w-100 h-100"
+                />
+              </div>
+              <div class="p-3">
+                <p id="p1">Fountain Pens</p>
+                <h1>How to Craft a Better Todo List</h1>
+                <p>
+                  A well-crafted Todo list acts as a guiding light for your day.
+                  It helps you overcome...
+                </p>
+              </div>
+
+              <div class="p-3">
+                <p id="arrow">
+                  See All Deals <i class="bi bi-arrow-right"></i>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-6 mb-4">
+            <div class="card-container shadow">
+              <div class="text-center mb-2">
+                <img
+                  src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-trending-blogs-2-img.png"
+                  class="mb-3 w-100 h-100"
+                />
+              </div>
+              <div class="p-3">
+                <p id="p1">Fountain Pens</p>
+                <h1>How to Craft a Better Todo List</h1>
+                <p>
+                  A well-crafted Todo list acts as a guiding light for your day.
+                  It helps you overcome...
+                </p>
+              </div>
+
+              <div class="p-3">
+                <p id="arrow">
+                  See All Deals <i class="bi bi-arrow-right"></i>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
