--- a/Coding-practise - 11th May/Ecommerce Website Footer Section.html
+++ b/Coding-practise - 11th May/Ecommerce Website Footer Section.html
@@ -25,7 +25,95 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="./Ecommerce Website Footer Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-container pb-5">
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-12 col-md-6 col-lg-3 col-xl-3 text-center d-md-none d-block pt-3 pb-3"
+          >
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-website-logo-img.png"
+              class="mt-3 mb-3 w-50 h-50"
+            />
+            <div class="d-flex flex-row justify-content-center">
+              <div class="icon-bg">
+                <i class="bi bi-google icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-twitter icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-instagram icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-linkedin icon"></i>
+              </div>
+            </div>
+            <h1>37, Ayur Vigyan Nagar, New Delhi, India.</h1>
+          </div>
+          <div
+            class="col-12 col-md-6 col-lg-3 col-xl-3 text-center d-none d-md-block p-md-2"
+          >
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-website-logo-img.png"
+              class="w-50 h-50 text-center"
+            />
+            <div class="d-flex flex-row justify-content-left">
+              <div class="icon-bg">
+                <i class="bi bi-google icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-twitter icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-instagram icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-linkedin icon"></i>
+              </div>
+            </div>
+            <h1>37, Ayur Vigyan Nagar, New Delhi, India.</h1>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-3 col-xl-3 mt-md-3">
+            <h1 class="h1">Get to know us</h1>
+            <p>About us</p>
+            <p>Career</p>
+            <p>Press Releases</p>
+            <p>Gift a smile</p>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-3 col-xl-3 mt-md-3">
+            <h1 class="h1">Contact with Us</h1>
+            <p>Facebook</p>
+            <p>twitter</p>
+            <p>Instagram</p>
+          </div>
+
+          <div class="col-6 col-md-6 col-lg-3 col-xl-3 mt-md-3">
+            <h1 class="h1">Let Us Help You</h1>
+            <p>100% Purchase Protection</p>
+            <p>Your account</p>
+            <p>Return Centre</p>
+            <p>Help</p>
+          </div>
+
+          <div class="col-12 text-center">
+            <hr />
+            <p class="p">
+              <i class="bi bi-c-circle icon1"></i>
+              2020 by Rahul. Created with Bootstrap.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
