--- a/Coding-practise - 11th May/Ecommerce Website Offers Section.html
+++ b/Coding-practise - 11th May/Ecommerce Website Offers Section.html
@@ -27,5 +27,36 @@
     ></script>
     <link rel="stylesheet" href="./Ecommerce Website Offers Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-container pt-5 pb-5">
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-12 col-md-2 order-1 order-md-2 text-center text-md-center mr-5"
+          >
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-offers-special-img.png"
+              class="image"
+            />
+          </div>
+
+          <div class="col-12 col-md-4 order-3 order-md-1 text-center mt-4 mb-3">
+            <h1>BEST NEW YEAR SPECIAL OFFERS</h1>
+            <p>Best time to buy. Save upto <span>70% cash</span></p>
+            <img
+              class="w-100 h-50"
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-offers-credit-card-img.png"
+            />
+          </div>
+
+          <div class="col-12 col-md-4 order-2 order-md-3 text-center">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-offers-appliances-img.png"
+              class="pl-4 pt-4 w-100 h-100"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
