--- a/Coding-practise - 11th May/Ecommerce Website Products Section.html
+++ b/Coding-practise - 11th May/Ecommerce Website Products Section.html
@@ -15,17 +15,265 @@
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
+
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="./Ecommerce Website Products Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-container pb-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 d-block pt-3 pb-3">
+            <h1>Our Products</h1>
+          </div>
+          <div class="col-12 col-md-6">
+            <div
+              class="product-image-1 mb-3 pt-5 pb-5 d-flex flex-column justify-content-end text-left pl-3"
+            >
+              <h1 class="h1">Smart Headphones</h1>
+              <p>Headphones with Deep Bass, sound, touch...</p>
+
+              <button
+                type="button"
+                class="p-button"
+                data-toggle="modal"
+                data-target="#exampleModal"
+              >
+                View Details
+              </button>
+
+              <div
+                class="modal fade"
+                id="exampleModal"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">
+                        Sony WH-1000XM4 Noise Cancelling Headphones
+                      </h5>
+                      <button
+                        type="button"
+                        class="close"
+                        data-dismiss="modal"
+                        aria-label="Close"
+                      >
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <p class="modal-para">
+                        Get Best Smart Headphones Prices Online in India. Select
+                        from the best range of Headphones from the most popular
+                        brands...
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Voice Assistants:</span
+                        >
+                        Alexa, Google Assistant & Siri
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Smart Listening:</span
+                        >
+                        Ambient sound with the best noise cancellation
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Long Battery Life:</span
+                        >
+                        A single charge provides 30 hours of playtime
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Quick Charging:</span
+                        >
+                        Charge for 10 Min for 5 hours play back
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Touch Controls:</span
+                        >
+                        Change the track with your fingertip
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button
+                        type="button"
+                        class="btn btn-outline-dark"
+                        data-dismiss="modal"
+                      >
+                        Buy Now
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="container2" class="col-12 col-md-6">
+            <div
+              class="product-image-2 mb-3 pt-5 pb-5 d-flex flex-column justify-content-end text-left pl-3"
+            >
+              <h1 class="h1">Laptops</h1>
+              <p>Explore vast selection of Laptops...</p>
+
+              <button
+                type="button"
+                class="p-button"
+                data-toggle="modal"
+                data-target="#exampleModal1"
+              >
+                View Details
+              </button>
+
+              <div
+                class="modal fade"
+                id="exampleModal1"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel1"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel1">
+                        Inspiron 14 5490 core i5 Laptop
+                      </h5>
+                      <button
+                        type="button"
+                        class="close"
+                        data-dismiss="modal"
+                        aria-label="Close"
+                      >
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <p class="modal-para">
+                        Get Best Smart Headphones Prices Online in India. Select
+                        from the best range of Headphones from the most popular
+                        brands..
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Performance:</span
+                        >
+                        Core i5 3rd Gen, 2.6 Ghz, 4 GB RAM
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Storage:</span
+                        >
+                        500 GB HDD, SATA, 7200 RPM
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Battery:</span
+                        >
+                        Li-lon, 6 Cell
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Design:</span
+                        >
+                        14.0 Inches, 1366 X 768, 2.07 Kg, 34 MM Thick
+                      </p>
+                      <p class="modal-para">
+                        <span
+                          style="
+                            color: #323f4b;
+                            font-weight: bold;
+                            font-size: 13px;
+                          "
+                          >Touch Controls:</span
+                        >
+                        Change the track with your fingertip
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button
+                        type="button"
+                        class="btn btn-outline-dark"
+                        data-dismiss="modal"
+                      >
+                        Buy Now
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 text-right">
+          <p id="arrow">See All Offers <i class="bi bi-arrow-right"></i></p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
