--- a/Java script Practise/17th May/Mail id.html
+++ b/Java script Practise/17th May/Mail id.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login page</title>
 
-    <link rel="stylesheet" href="Mail id.css" />
+    <link rel="stylesheet" href="./Mail id.css" />
     <script src="Mail id.js"></script>
   </head>
   <body>
@@ -19,11 +19,11 @@
         <br />
         <label for="">Password</label>
         <div>
-          <input id="password" type="password" placeholder="Enter Password" />
+          <input id="password" type="password" placeholder="Enter password" />
           <br />
         </div>
         <br />
-        <button onclick="validateUser()">Sign In</button> <br />
+        <button onclick="validateUser()">SignIn</button> <br />
         <br />
         <p id="message"></p>
       </div>
