--- a/Java script Practise/17th May/Mail id.html
+++ b/Java script Practise/17th May/Mail id.html
@@ -5,28 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login page</title>
 
-    <link rel="stylesheet" href="./Mail id.css" />
-    <script src="Mail id.js"></script>
+    <link rel="stylesheet" href="Mail id.css" />
   </head>
   <body>
-    <div>
-      <div>
-        <label for="">Username</label>
-        <div>
-          <input id="username" type="email" placeholder="Enter Username" />
-          <br />
-        </div>
-        <br />
-        <label for="">Password</label>
-        <div>
-          <input id="password" type="password" placeholder="Enter password" />
-          <br />
-        </div>
-        <br />
-        <button onclick="validateUser()">SignIn</button> <br />
-        <br />
-        <p id="message"></p>
-      </div>
-    </div>
+    <label for="">Username</label>
+
+    <input id="username" type="email" placeholder="Enter Username" />
+
+    <label for="">Password</label>
+
+    <input id="password" type="password" placeholder="Enter Password" />
+
+    <button onclick="validateUser()">Sign In</button>
+
+    <p id="message"></p>
+
+    <script src="Mail id.js"></script>
   </body>
 </html>
