--- a/Java script Practise/17th May/random.html
+++ b/Java script Practise/17th May/random.html
@@ -3,15 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Guess the number</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./random.css" />
   </head>
   <body>
-    <label for="">Enter number between 1 and 100</label> <br />
-    <input id="usernput" type="number" />
-    <button onclick="validateNum()">submit</button>
+    <div class="container-fluid bg-container">
+      <div class="row bg-white">
+        <div class="col-12 bg-white pt-5 pb-5 text-center">
+          <label>Find out the right number between 1 to 100</label>
+        </div>
+      </div>
+      <br />
 
-    <h1 id="msg"></h1>
-
+      <div class="row">
+        <div class="col-12 guess-bg-container text-center">
+          <h1 class="heading">Guess The Number</h1>
+          <input id="userinput" type="text" />
+          <br />
+          <div>
+            <button onclick="validateNum()">Check</button>
+          </div>
+          <br />
+          <h1 id="message"></h1>
+        </div>
+      </div>
+    </div>
     <script src="random.js"></script>
   </body>
 </html>
