--- a/Java script Practise/20th May/Seasons Switcher.html
+++ b/Java script Practise/20th May/Seasons Switcher.html
@@ -28,8 +28,13 @@
   </head>
   <body>
     <div>
-      <img src="" />
-      <div class="d-flex flex-row justify-content-center mt-4">
+      <div class="d-flex flex-row justify-content-center">
+        <img
+          src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-dynamic-webapps/seasons-switcher-four-seasons-xs-img.png"
+          id="seasonSmallImageElement"
+        />
+      </div>
+      <div class="d-flex flex-row justify-content-center">
         <button id="springButton" onclick="changeSeasonToSpring()">
           Spring
         </button>
